remove java 21 feature from project wit java 17 target
Signed-off-by: Guido Grune <g.grune@datainmotion.com>